complete fundation and guid

--- a/ui/Zela/index.html
+++ b/ui/Zela/index.html
@@ -124,25 +124,29 @@
     <div data-tauri-drag-region id="file_name">
         <div id="title">
             <div><span id="name">name</span></div>
-            <div class="breadcrumb">
+            <!-- <div class="breadcrumb">
                 <li class="breadcrumb-item no_active">Home</li>
                 <li class="breadcrumb-item active" aria-current="page">/Library</li>
+            </div> -->
+        </div>
+       <div id="button_area">
+            <div class="button_block">
+                <div class="button press" id="fun1">
+                    search
+                </div>
+                <div class="button" id="fun2">
+                        guide
+                </div>
+            </div>
+            <div class="button_block">
+                    <div class="button press" id="button_3">
+                        你
+                    </div>
+                    <div class="button" id="button_4">
+                        你
+                    </div>
             </div>
         </div>
-<!--        <div id="button_area">-->
-<!--            <div>-->
-<!--                你-->
-<!--            </div>-->
-<!--            <div>-->
-<!--                你-->
-<!--            </div>-->
-<!--            <div class="button press" id="button_3">-->
-<!--                你-->
-<!--            </div>-->
-<!--            <div class="button" id="button_4">-->
-<!--                你-->
-<!--            </div>-->
-<!--        </div>-->
     </div>
 
 
@@ -188,7 +192,7 @@
     <div class="copy">复制</div>
     <div id="add_tile">作为磁贴</div>
 </div>
-<div>
+<div class="menu" id="contextMenu5">
     <div id="rename">重命名</div>
     <div>删除</div>
 </div>
