The commit edition waiting for a genius idea to optimize it

--- a/ui/Zela/index.html
+++ b/ui/Zela/index.html
@@ -24,18 +24,6 @@
         <div id="disk">
             <div class="block">
                 <div class="title">
-                    <span>Quick Tile</span>
-                    <img id="button_1" class="arrow_row rotate" src="./imgs/Chevron_Down.svg" alt="">
-                </div>
-                <div class="fold tiles">
-                    <div class="item press tile">
-                        <img src="./imgs/home.svg" alt="">
-                        <div class="text tile"><span>Home</span></div>
-                    </div>
-                </div>
-            </div>
-            <div class="block">
-                <div class="title">
                     <span>Location</span>
                     <img id="button_2" class="arrow_row rotate" src="./imgs/Chevron_Down.svg" alt="">
                 </div>
@@ -46,6 +34,24 @@
                     </div>
                 </div>
             </div>
+            <div class="block">
+                <div class="title">
+                    <span>Quick Tile</span>
+                    <img id="button_1" class="arrow_row rotate" src="./imgs/Chevron_Down.svg" alt="">
+                </div>
+                <div id="context_1" class="fold tiles">
+                    <div class="item tile mini-title">
+                        <div class="left_block">
+                        <img src="./imgs/home.svg" alt="">
+                        <div class="text tile"><span>Keria</span></div>
+                        </div>
+                        <img  class="arrow_row rotate" src="./imgs/Chevron_Down.svg" alt="">
+                    </div>
+
+
+                </div>
+            </div>
+
 
         </div>
         <div id="msg">
@@ -55,7 +61,7 @@
                     <img id="button_1" class="arrow_row rotate" src="./imgs/Chevron_Down.svg" alt="">
                 </div>
                 <div class="fold tiles">
-                    <div class="item press tile">
+                    <div class="item  tile">
                         <div class="text tile"><span id="msg_mini1">Home</span></div>
                     </div>
                 </div>
@@ -66,7 +72,7 @@
                     <img id="button_1" class="arrow_row rotate" src="./imgs/Chevron_Down.svg" alt="">
                 </div>
                 <div class="fold tiles">
-                    <div class="item press tile">
+                    <div class="item  tile">
                         <div class="text tile"><span id="msg_mini2">Home</span></div>
                     </div>
                 </div>
@@ -77,7 +83,7 @@
                     <img id="button_1" class="arrow_row rotate" src="./imgs/Chevron_Down.svg" alt="">
                 </div>
                 <div class="fold tiles">
-                    <div class="item press tile">
+                    <div class="item  tile">
                         <div class="text tile"><span id="msg_mini3">Home</span></div>
                     </div>
                 </div>
@@ -88,7 +94,7 @@
                     <img id="button_1" class="arrow_row rotate" src="./imgs/Chevron_Down.svg" alt="">
                 </div>
                 <div class="fold tiles">
-                    <div class="item press tile">
+                    <div class="item  tile">
                         <div class="text tile"><span id="msg_mini4">Home</span></div>
                     </div>
                 </div>
@@ -99,7 +105,7 @@
                     <img id="button_1" class="arrow_row rotate" src="./imgs/Chevron_Down.svg" alt="">
                 </div>
                 <div class="fold tiles">
-                    <div class="item press tile">
+                    <div class="item  tile">
                         <div class="text tile"><span id="msg_mini5">Home</span></div>
                     </div>
                 </div>
@@ -131,7 +137,7 @@
         </div>
        <div id="button_area">
             <div class="button_block">
-                <div class="button press" id="fun1">
+                <div class="button " id="fun1">
                     search
                 </div>
                 <div class="button" id="fun2">
@@ -139,11 +145,11 @@
                 </div>
             </div>
             <div class="button_block">
-                    <div class="button press" id="button_3">
-                        你
+                    <div class="button " id="button_3">
+                        type1
                     </div>
                     <div class="button" id="button_4">
-                        你
+                        type2
                     </div>
             </div>
         </div>
@@ -196,7 +202,7 @@
     <div id="rename">重命名</div>
     <div>删除</div>
 </div>
-<!--<script src="./js/drag.js"></script>-->
+<script src="./js/drag.js"></script>
 <script src="./js/index.js"></script>
 </body>
 </html>
